hexbait-lang/tests/snapshots/parser__pe.hbl@pe.hbl.snap
---
source: hexbait-lang/tests/parser.rs
expression: "!endian le;\n\nmz_header {\n    magic bytes = \"MZ\";\n    !seek to 60;\n    new_exe_header u32;\n};\n\n!seek to .mz_header.new_exe_header;\n\npe_header {\n    magic bytes = <\"PE\" 00 00>;\n    machine u16;\n    num_of_sections u16;\n    time_date_stamp u32;\n    pointer_to_symbol_table u32;\n    num_of_symbols u32;\n    size_of_optional_header u16;\n    characteristics u16;\n};\n\noptional_header {\n    magic bytes = <0b 01>;\n    major_linker_version u8;\n    minor_linker_version u8;\n    size_of_code u32;\n    size_of_initialized_data u32;\n    size_of_uninitialized_data u32;\n    addr_of_entry_point u32;\n    base_of_code u32;\n    base_of_data u32;\n};\n\nlet size_of_pe_header = 24;\n!seek to .mz_header.new_exe_header + .pe_header.size_of_optional_header + .size_of_pe_header;\n\nsections [{\n    !scope at $offset {\n        section_name bytes while peek(u8) != 0 && $len < 8;\n    }\n    !seek by 8;\n\n    virtual_size u32;\n    virtual_address u32;\n    size_of_raw_data u32;\n    pointer_to_raw_data u32;\n    pointer_to_relocations u32;\n    pointer_to_line_numbers u32;\n    number_of_relocations u16;\n    number_of_line_numbers u16;\n    characteristics u32;\n    !scope at .pointer_to_raw_data {\n        content bytes len .size_of_raw_data;\n    }\n}] len .pe_header.num_of_sections;\n"
input_file: format_descriptions/pe.hbl
---
File@0..1253
  EndiannessDeclaration@0..11
    ExclamationMark@0..1 "!"
    Identifier@1..7 "endian"
    Whitespace@7..8 " "
    Identifier@8..10 "le"
    Semicolon@10..11 ";"
  Whitespace@11..13 "\n\n"
  StructField@13..92
    Identifier@13..22 "mz_header"
    Whitespace@22..23 " "
    AnonymousStructParseType@23..91
      StructBlock@23..91
        LBrace@23..24 "{"
        Whitespace@24..29 "\n    "
        StructField@29..48
          Identifier@29..34 "magic"
          Whitespace@34..35 " "
          BytesParseType@35..40
            BytesKw@35..40 "bytes"
          Whitespace@40..41 " "
          Equals@41..42 "="
          Whitespace@42..43 " "
          Atom@43..47
            StringLiteral@43..47 "\"MZ\""
          Semicolon@47..48 ";"
        Whitespace@48..53 "\n    "
        SeekToDeclaration@53..65
          ExclamationMark@53..54 "!"
          Identifier@54..58 "seek"
          Whitespace@58..59 " "
          Identifier@59..61 "to"
          Whitespace@61..62 " "
          Atom@62..64
            DecimalIntegerLiteral@62..64 "60"
          Semicolon@64..65 ";"
        Whitespace@65..70 "\n    "
        StructField@70..89
          Identifier@70..84 "new_exe_header"
          Whitespace@84..85 " "
          NamedParseType@85..88
            Identifier@85..88 "u32"
          Semicolon@88..89 ";"
        Whitespace@89..90 "\n"
        RBrace@90..91 "}"
    Semicolon@91..92 ";"
  Whitespace@92..94 "\n\n"
  SeekToDeclaration@94..129
    ExclamationMark@94..95 "!"
    Identifier@95..99 "seek"
    Whitespace@99..100 " "
    Identifier@100..102 "to"
    Whitespace@102..103 " "
    FieldAccess@103..128
      FieldAccess@103..113
        Dot@103..104 "."
        BareField@104..113
          Identifier@104..113 "mz_header"
      Dot@113..114 "."
      BareField@114..128
        Identifier@114..128 "new_exe_header"
    Semicolon@128..129 ";"
  Whitespace@129..131 "\n\n"
  StructField@131..359
    Identifier@131..140 "pe_header"
    Whitespace@140..141 " "
    AnonymousStructParseType@141..358
      StructBlock@141..358
        LBrace@141..142 "{"
        Whitespace@142..147 "\n    "
        StructField@147..174
          Identifier@147..152 "magic"
          Whitespace@152..153 " "
          BytesParseType@153..158
            BytesKw@153..158 "bytes"
          Whitespace@158..159 " "
          Equals@159..160 "="
          Whitespace@160..161 " "
          ByteConcat@161..173
            LAngle@161..162 "<"
            StringLiteral@162..166 "\"PE\""
            Whitespace@166..167 " "
            DecimalIntegerLiteral@167..169 "00"
            Whitespace@169..170 " "
            DecimalIntegerLiteral@170..172 "00"
            RAngle@172..173 ">"
          Semicolon@173..174 ";"
        Whitespace@174..179 "\n    "
        StructField@179..191
          Identifier@179..186 "machine"
          Whitespace@186..187 " "
          NamedParseType@187..190
            Identifier@187..190 "u16"
          Semicolon@190..191 ";"
        Whitespace@191..196 "\n    "
        StructField@196..216
          Identifier@196..211 "num_of_sections"
          Whitespace@211..212 " "
          NamedParseType@212..215
            Identifier@212..215 "u16"
          Semicolon@215..216 ";"
        Whitespace@216..221 "\n    "
        StructField@221..241
          Identifier@221..236 "time_date_stamp"
          Whitespace@236..237 " "
          NamedParseType@237..240
            Identifier@237..240 "u32"
          Semicolon@240..241 ";"
        Whitespace@241..246 "\n    "
        StructField@246..274
          Identifier@246..269 "pointer_to_symbol_table"
          Whitespace@269..270 " "
          NamedParseType@270..273
            Identifier@270..273 "u32"
          Semicolon@273..274 ";"
        Whitespace@274..279 "\n    "
        StructField@279..298
          Identifier@279..293 "num_of_symbols"
          Whitespace@293..294 " "
          NamedParseType@294..297
            Identifier@294..297 "u32"
          Semicolon@297..298 ";"
        Whitespace@298..303 "\n    "
        StructField@303..331
          Identifier@303..326 "size_of_optional_header"
          Whitespace@326..327 " "
          NamedParseType@327..330
            Identifier@327..330 "u16"
          Semicolon@330..331 ";"
        Whitespace@331..336 "\n    "
        StructField@336..356
          Identifier@336..351 "characteristics"
          Whitespace@351..352 " "
          NamedParseType@352..355
            Identifier@352..355 "u16"
          Semicolon@355..356 ";"
        Whitespace@356..357 "\n"
        RBrace@357..358 "}"
    Semicolon@358..359 ";"
  Whitespace@359..361 "\n\n"
  StructField@361..631
    Identifier@361..376 "optional_header"
    Whitespace@376..377 " "
    AnonymousStructParseType@377..630
      StructBlock@377..630
        LBrace@377..378 "{"
        Whitespace@378..383 "\n    "
        StructField@383..405
          Identifier@383..388 "magic"
          Whitespace@388..389 " "
          BytesParseType@389..394
            BytesKw@389..394 "bytes"
          Whitespace@394..395 " "
          Equals@395..396 "="
          Whitespace@396..397 " "
          ByteConcat@397..404
            LAngle@397..398 "<"
            ByteLiteral@398..400 "0b"
            Whitespace@400..401 " "
            DecimalIntegerLiteral@401..403 "01"
            RAngle@403..404 ">"
          Semicolon@404..405 ";"
        Whitespace@405..410 "\n    "
        StructField@410..434
          Identifier@410..430 "major_linker_version"
          Whitespace@430..431 " "
          NamedParseType@431..433
            Identifier@431..433 "u8"
          Semicolon@433..434 ";"
        Whitespace@434..439 "\n    "
        StructField@439..463
          Identifier@439..459 "minor_linker_version"
          Whitespace@459..460 " "
          NamedParseType@460..462
            Identifier@460..462 "u8"
          Semicolon@462..463 ";"
        Whitespace@463..468 "\n    "
        StructField@468..485
          Identifier@468..480 "size_of_code"
          Whitespace@480..481 " "
          NamedParseType@481..484
            Identifier@481..484 "u32"
          Semicolon@484..485 ";"
        Whitespace@485..490 "\n    "
        StructField@490..519
          Identifier@490..514 "size_of_initialized_data"
          Whitespace@514..515 " "
          NamedParseType@515..518
            Identifier@515..518 "u32"
          Semicolon@518..519 ";"
        Whitespace@519..524 "\n    "
        StructField@524..555
          Identifier@524..550 "size_of_uninitialized ..."
          Whitespace@550..551 " "
          NamedParseType@551..554
            Identifier@551..554 "u32"
          Semicolon@554..555 ";"
        Whitespace@555..560 "\n    "
        StructField@560..584
          Identifier@560..579 "addr_of_entry_point"
          Whitespace@579..580 " "
          NamedParseType@580..583
            Identifier@580..583 "u32"
          Semicolon@583..584 ";"
        Whitespace@584..589 "\n    "
        StructField@589..606
          Identifier@589..601 "base_of_code"
          Whitespace@601..602 " "
          NamedParseType@602..605
            Identifier@602..605 "u32"
          Semicolon@605..606 ";"
        Whitespace@606..611 "\n    "
        StructField@611..628
          Identifier@611..623 "base_of_data"
          Whitespace@623..624 " "
          NamedParseType@624..627
            Identifier@624..627 "u32"
          Semicolon@627..628 ";"
        Whitespace@628..629 "\n"
        RBrace@629..630 "}"
    Semicolon@630..631 ";"
  Whitespace@631..633 "\n\n"
  LetStatement@633..660
    LetKw@633..636 "let"
    Whitespace@636..637 " "
    Identifier@637..654 "size_of_pe_header"
    Whitespace@654..655 " "
    Equals@655..656 "="
    Whitespace@656..657 " "
    Atom@657..659
      DecimalIntegerLiteral@657..659 "24"
    Semicolon@659..660 ";"
  Whitespace@660..661 "\n"
  SeekToDeclaration@661..754
    ExclamationMark@661..662 "!"
    Identifier@662..666 "seek"
    Whitespace@666..667 " "
    Identifier@667..669 "to"
    Whitespace@669..670 " "
    InfixExpr@670..753
      InfixExpr@670..732
        FieldAccess@670..695
          FieldAccess@670..680
            Dot@670..671 "."
            BareField@671..680
              Identifier@671..680 "mz_header"
          Dot@680..681 "."
          BareField@681..695
            Identifier@681..695 "new_exe_header"
        Whitespace@695..696 " "
        Op@696..697
          Plus@696..697 "+"
        Whitespace@697..698 " "
        FieldAccess@698..732
          FieldAccess@698..708
            Dot@698..699 "."
            BareField@699..708
              Identifier@699..708 "pe_header"
          Dot@708..709 "."
          BareField@709..732
            Identifier@709..732 "size_of_optional_header"
      Whitespace@732..733 " "
      Op@733..734
        Plus@733..734 "+"
      Whitespace@734..735 " "
      FieldAccess@735..753
        Dot@735..736 "."
        BareField@736..753
          Identifier@736..753 "size_of_pe_header"
    Semicolon@753..754 ";"
  Whitespace@754..756 "\n\n"
  StructField@756..1252
    Identifier@756..764 "sections"
    Whitespace@764..765 " "
    RepeatParseType@765..1251
      LBracket@765..766 "["
      AnonymousStructParseType@766..1219
        StructBlock@766..1219
          LBrace@766..767 "{"
          Whitespace@767..772 "\n    "
          ScopeAtDeclaration@772..857
            ExclamationMark@772..773 "!"
            Identifier@773..778 "scope"
            Whitespace@778..779 " "
            Identifier@779..781 "at"
            Whitespace@781..782 " "
            Metavar@782..789
              Dollar@782..783 "$"
              Identifier@783..789 "offset"
            Whitespace@789..790 " "
            StructBlock@790..857
              LBrace@790..791 "{"
              Whitespace@791..800 "\n        "
              StructField@800..851
                Identifier@800..812 "section_name"
                Whitespace@812..813 " "
                BytesParseType@813..850
                  BytesKw@813..818 "bytes"
                  Whitespace@818..819 " "
                  RepeatWhileDecl@819..850
                    Identifier@819..824 "while"
                    Whitespace@824..825 " "
                    InfixExpr@825..850
                      InfixExpr@825..838
                        PeekExpr@825..833
                          PeekKw@825..829 "peek"
                          LParen@829..830 "("
                          NamedParseType@830..832
                            Identifier@830..832 "u8"
                          RParen@832..833 ")"
                        Whitespace@833..834 " "
                        Op@834..836
                          ExclamationMark@834..835 "!"
                          Equals@835..836 "="
                        Whitespace@836..837 " "
                        Atom@837..838
                          DecimalIntegerLiteral@837..838 "0"
                      Whitespace@838..839 " "
                      Op@839..841
                        Ampersand@839..840 "&"
                        Ampersand@840..841 "&"
                      Whitespace@841..842 " "
                      InfixExpr@842..850
                        Metavar@842..846
                          Dollar@842..843 "$"
                          Identifier@843..846 "len"
                        Whitespace@846..847 " "
                        Op@847..848
                          LAngle@847..848 "<"
                        Whitespace@848..849 " "
                        Atom@849..850
                          DecimalIntegerLiteral@849..850 "8"
                Semicolon@850..851 ";"
              Whitespace@851..856 "\n    "
              RBrace@856..857 "}"
          Whitespace@857..862 "\n    "
          SeekByDeclaration@862..873
            ExclamationMark@862..863 "!"
            Identifier@863..867 "seek"
            Whitespace@867..868 " "
            Identifier@868..870 "by"
            Whitespace@870..871 " "
            Atom@871..872
              DecimalIntegerLiteral@871..872 "8"
            Semicolon@872..873 ";"
          Whitespace@873..879 "\n\n    "
          StructField@879..896
            Identifier@879..891 "virtual_size"
            Whitespace@891..892 " "
            NamedParseType@892..895
              Identifier@892..895 "u32"
            Semicolon@895..896 ";"
          Whitespace@896..901 "\n    "
          StructField@901..921
            Identifier@901..916 "virtual_address"
            Whitespace@916..917 " "
            NamedParseType@917..920
              Identifier@917..920 "u32"
            Semicolon@920..921 ";"
          Whitespace@921..926 "\n    "
          StructField@926..947
            Identifier@926..942 "size_of_raw_data"
            Whitespace@942..943 " "
            NamedParseType@943..946
              Identifier@943..946 "u32"
            Semicolon@946..947 ";"
          Whitespace@947..952 "\n    "
          StructField@952..976
            Identifier@952..971 "pointer_to_raw_data"
            Whitespace@971..972 " "
            NamedParseType@972..975
              Identifier@972..975 "u32"
            Semicolon@975..976 ";"
          Whitespace@976..981 "\n    "
          StructField@981..1008
            Identifier@981..1003 "pointer_to_relocations"
            Whitespace@1003..1004 " "
            NamedParseType@1004..1007
              Identifier@1004..1007 "u32"
            Semicolon@1007..1008 ";"
          Whitespace@1008..1013 "\n    "
          StructField@1013..1041
            Identifier@1013..1036 "pointer_to_line_numbers"
            Whitespace@1036..1037 " "
            NamedParseType@1037..1040
              Identifier@1037..1040 "u32"
            Semicolon@1040..1041 ";"
          Whitespace@1041..1046 "\n    "
          StructField@1046..1072
            Identifier@1046..1067 "number_of_relocations"
            Whitespace@1067..1068 " "
            NamedParseType@1068..1071
              Identifier@1068..1071 "u16"
            Semicolon@1071..1072 ";"
          Whitespace@1072..1077 "\n    "
          StructField@1077..1104
            Identifier@1077..1099 "number_of_line_numbers"
            Whitespace@1099..1100 " "
            NamedParseType@1100..1103
              Identifier@1100..1103 "u16"
            Semicolon@1103..1104 ";"
          Whitespace@1104..1109 "\n    "
          StructField@1109..1129
            Identifier@1109..1124 "characteristics"
            Whitespace@1124..1125 " "
            NamedParseType@1125..1128
              Identifier@1125..1128 "u32"
            Semicolon@1128..1129 ";"
          Whitespace@1129..1134 "\n    "
          ScopeAtDeclaration@1134..1217
            ExclamationMark@1134..1135 "!"
            Identifier@1135..1140 "scope"
            Whitespace@1140..1141 " "
            Identifier@1141..1143 "at"
            Whitespace@1143..1144 " "
            FieldAccess@1144..1164
              Dot@1144..1145 "."
              BareField@1145..1164
                Identifier@1145..1164 "pointer_to_raw_data"
            Whitespace@1164..1165 " "
            StructBlock@1165..1217
              LBrace@1165..1166 "{"
              Whitespace@1166..1175 "\n        "
              StructField@1175..1211
                Identifier@1175..1182 "content"
                Whitespace@1182..1183 " "
                BytesParseType@1183..1210
                  BytesKw@1183..1188 "bytes"
                  Whitespace@1188..1189 " "
                  RepeatLenDecl@1189..1210
                    Identifier@1189..1192 "len"
                    Whitespace@1192..1193 " "
                    FieldAccess@1193..1210
                      Dot@1193..1194 "."
                      BareField@1194..1210
                        Identifier@1194..1210 "size_of_raw_data"
                Semicolon@1210..1211 ";"
              Whitespace@1211..1216 "\n    "
              RBrace@1216..1217 "}"
          Whitespace@1217..1218 "\n"
          RBrace@1218..1219 "}"
      RBracket@1219..1220 "]"
      Whitespace@1220..1221 " "
      RepeatLenDecl@1221..1251
        Identifier@1221..1224 "len"
        Whitespace@1224..1225 " "
        FieldAccess@1225..1251
          FieldAccess@1225..1235
            Dot@1225..1226 "."
            BareField@1226..1235
              Identifier@1226..1235 "pe_header"
          Dot@1235..1236 "."
          BareField@1236..1251
            Identifier@1236..1251 "num_of_sections"
    Semicolon@1251..1252 ";"
  Whitespace@1252..1253 "\n"

--- diagnostics ---
no diagnostics
