hexbait-lang/tests/snapshots/parser__recover_parse_type.hbl@recover_parse_type.hbl.snap
---
source: hexbait-lang/tests/parser.rs
expression: result
input_file: hexbait-lang/tests/parser-cases/recover_parse_type.hbl
---
File@0..27
  EndiannessDeclaration@0..11
    ExclamationMark@0..1 "!"
    Identifier@1..7 "endian"
    Whitespace@7..8 " "
    Identifier@8..10 "le"
    Semicolon@10..11 ";"
  Whitespace@11..13 "\n\n"
  StructField@13..20
    Identifier@13..14 "a"
    Whitespace@14..15 " "
    Error@15..18
      Error@15..18
        RParen@15..16 ")"
        Whitespace@16..17 " "
        RParen@17..18 ")"
    Whitespace@18..19 " "
    Semicolon@19..20 ";"
  Whitespace@20..21 "\n"
  StructField@21..26
    Identifier@21..22 "b"
    Whitespace@22..23 " "
    NamedParseType@23..25
      Identifier@23..25 "u8"
    Semicolon@25..26 ";"
  Whitespace@26..27 "\n"

--- diagnostics ---
error: expected an identifier, `{`, `[`, `bytes` or `switch`
  ┌─ recover_parse_type.hbl:3:3
  │
3 │ a ) ) ;
  │   ^ found unexpected token `)`
