hexbait-lang/tests/snapshots/parser__unclosed_block.hbl@unclosed_block.hbl.snap
---
source: hexbait-lang/tests/parser.rs
expression: "!endian le;\n\na {\n    b u8;\n"
input_file: hexbait-lang/tests/parser-cases/unclosed_block.hbl
---
File@0..27
  EndiannessDeclaration@0..11
    ExclamationMark@0..1 "!"
    Identifier@1..7 "endian"
    Whitespace@7..8 " "
    Identifier@8..10 "le"
    Semicolon@10..11 ";"
  Whitespace@11..13 "\n\n"
  StructField@13..26
    Identifier@13..14 "a"
    Whitespace@14..15 " "
    AnonymousStructParseType@15..26
      StructBlock@15..26
        LBrace@15..16 "{"
        Whitespace@16..21 "\n    "
        StructField@21..26
          Identifier@21..22 "b"
          Whitespace@22..23 " "
          NamedParseType@23..25
            Identifier@23..25 "u8"
          Semicolon@25..26 ";"
  Whitespace@26..27 "\n"

--- diagnostics ---
error: expected `}`
  ┌─ unclosed_block.hbl:5:1
  │
4 │     b u8;
5 │ 
  │ ^ found unexpected token end of file
